[package]
name = "scryfall_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.16.0"
image = { version = "0.23.14" }
img_hash = "3.2.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
